name:                ShortCut
version:             0.7.0.0
synopsis:            First draft of a ShortCut parser
author:              Jeffrey David Johnson
maintainer:          jefdaj@berkeley.edu
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:   ShortCut.Interpret,
                     ShortCut.Compile,
                     ShortCut.Monads,
                     ShortCut.Parse,
                     ShortCut.Repl,
                     ShortCut.TypeCheck,
                     ShortCut.Types
  default-language:  Haskell2010
  build-depends:     base,
                     directory,
                     filepath,
                     haskeline,
                     parsec,
                     scientific,
                     transformers,
                     mtl,
                     Command,
                     MissingH,
                     pretty,
                     containers,
                     shake,
                     cryptohash,
                     bytestring,
                     enclosed-exceptions

executable shortcut
  main-is:           Main.hs
  other-modules:     ShortCut.Compile,
                     ShortCut.Interpret,
                     ShortCut.Monads,
                     ShortCut.Parse,
                     ShortCut.Repl,
                     ShortCut.TypeCheck,
                     ShortCut.Types
  hs-source-dirs:    src, src/ShortCut
  default-language:  Haskell2010
  build-depends:     base,
                     directory,
                     filepath,
                     haskeline,
                     parsec,
                     scientific,
                     transformers,
                     mtl,
                     Command,
                     MissingH,
                     pretty,
                     containers,
                     shake,
                     cryptohash,
                     bytestring,
                     enclosed-exceptions

test-suite shortcut-test
  ghc-options:       -Wall
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src, test, test/ShortCut
  main-is:           MainSpec.hs
  default-language:  Haskell2010
  extensions:        GeneralizedNewtypeDeriving
  build-depends:     base,
                     QuickCheck,
                     directory,
                     filepath,
                     haskeline,
                     hspec,
                     parsec,
                     scientific,
                     transformers,
                     mtl,
                     Command,
                     MissingH,
                     pretty,
                     containers,
                     shake,
                     cryptohash,
                     bytestring,
                     enclosed-exceptions
