name:               ShortCut
version:            0.7.0.0
synopsis:           A scripting language that makes short work of phylogenomic cuts
author:             Jeffrey David Johnson
maintainer:         jefdaj@berkeley.edu
build-type:         Simple
cabal-version:      >=1.10
data-files:         usage.txt,
                    data/*.faa,
                    data/*.fna,
                    data/*.gbk,
                    tests/blast/*.cut,
                    tests/blast/*.result,
                    tests/bugfix/*.cut,
                    tests/bugfix/*.tree,
                    tests/deps/*.txt,
                    tests/crb/*.cut,
                    tests/crb/*.result,
                    tests/lists/*.cut,
                    tests/lists/*.result,
                    tests/lists/*.tree,
                    tests/fasta/*.cut,
                    tests/fasta/*.tree,
                    tests/fasta/*.result,
                    tests/math/*.cut,
                    tests/math/*.result,
                    tests/math/*.tree,
                    tests/repeat/*.cut,
                    tests/repeat/*.result,
                    tests/repeat/*.tree,
                    tests/repl/*.tree,
                    tests/repl/*.txt,
                    tests/vars/*.cut,
                    tests/vars/*.result,
                    tests/vars/*.tree

executable shortcut
  main-is:          ShortCut.hs
  -- TODO adjust -N to the actual number of cores!
  -- TODO get the tests to work with this! (make them single-threaded?)
  ghc-options: 
        -threaded
        -rtsopts
        -Wall
        -- -Werror
        -Wno-orphans
  default-language: Haskell2010
  hs-source-dirs:   .
  other-modules:    Paths_ShortCut,
                    ShortCut.Core,
                    ShortCut.Core.Compile,
                    ShortCut.Core.Config,
                    ShortCut.Core.Debug,
                    ShortCut.Core.Eval,
                    ShortCut.Core.ModuleAPI,
                    ShortCut.Core.Parse,
                    ShortCut.Core.Paths,
                    ShortCut.Core.Pretty,
                    ShortCut.Core.Repl,
                    ShortCut.Core.Types,
                    ShortCut.Core.Util,
                    ShortCut.Modules,
                    ShortCut.Modules.BioMartR,
                    ShortCut.Modules.Blast,
                    ShortCut.Modules.BlastCRB,
                    ShortCut.Modules.Cheat,
                    ShortCut.Modules.Glob,
                    ShortCut.Modules.Length,
                    ShortCut.Modules.Math,
                    ShortCut.Modules.Permute,
                    ShortCut.Modules.Repeat,
                    ShortCut.Modules.Summarize,
                    ShortCut.Modules.SeqIO,
                    ShortCut.Modules.Sets,
                    ShortCut.Modules.Tables,
                    ShortCut.Test,
                    ShortCut.Test.Deps
                    ShortCut.Test.Eval,
                    ShortCut.Test.Parse,
                    ShortCut.Test.Repl
  build-depends:    Command,
                    Glob,
                    MissingH,
                    QuickCheck,
                    base,
                    bytestring,
                    configurator,
                    containers,
                    cryptohash,
                    directory,
                    docopt,
                    enclosed-exceptions,
                    filepath,
                    haskeline,
                    mtl,
                    parsec,
                    pretty,
                    process,
                    regex-compat,
                    silently,
                    scientific,
                    shake,
                    strict,
                    tasty,
                    tasty-golden,
                    tasty-quickcheck,
                    temporary,
                    text,
                    transformers,
                    utility-ht
