name:               ShortCut
version:            0.7.0.0
synopsis:           A scripting language that makes short work of phylogenomic cuts
author:             Jeffrey David Johnson
maintainer:         jefdaj@berkeley.edu
build-type:         Simple
cabal-version:      >=1.10
data-files:         usage.txt,
                    data/*.faa,
                    data/*.fna,
                    data/*.gbk,
                    tests/blast/*.cut,
                    tests/blast/*.result,
                    tests/blastdb/*.cut,
                    tests/blastdb/*.result,
                    tests/blastdb/*.tree,
                    tests/deps/*.txt,
                    tests/crb/*.cut,
                    tests/crb/*.result,
                    tests/lists/*.cut,
                    tests/lists/*.result,
                    tests/lists/*.tree,
                    tests/length/*.cut,
                    tests/length/*.result,
                    tests/length/*.tree,
                    tests/seqio/*.cut,
                    tests/seqio/*.tree,
                    tests/seqio/*.result,
                    tests/dedup/*.cut,
                    tests/dedup/*.result,
                    tests/dedup/*.tree,
                    tests/math/*.cut,
                    tests/math/*.result,
                    tests/math/*.tree,
                    tests/permute/*.cut,
                    tests/permute/*.result,
                    tests/permute/*.tree,
                    tests/rbh/*.cut,
                    tests/rbh/*.result,
                    tests/rbh/*.tree,
                    tests/repeat/*.cut,
                    tests/repeat/*.result,
                    tests/repeat/*.tree,
                    tests/repl/*.tree,
                    tests/repl/*.txt,
                    tests/vars/*.cut,
                    tests/vars/*.result,
                    tests/vars/*.tree

executable shortcut
  main-is:          ShortCut.hs
  -- TODO adjust -N to the actual number of cores!
  -- TODO get the tests to work with this! (make them single-threaded?)
  ghc-options: 
        -threaded
        -rtsopts
        -Wall
        -- -Werror
        -Wno-orphans
  default-language: Haskell2010
  hs-source-dirs:   .
  other-modules:    Paths_ShortCut,
                    ShortCut.Core,
                    ShortCut.Core.Compile,
                    ShortCut.Core.Compile.Basic,
                    ShortCut.Core.Compile.Map,
                    ShortCut.Core.Compile.Repeat,
                    ShortCut.Core.Paths,
                    ShortCut.Core.Config,
                    ShortCut.Core.Debug,
                    ShortCut.Core.Eval,
                    ShortCut.Core.Parse,
                    ShortCut.Core.Parse.Basic,
                    ShortCut.Core.Parse.Expr,
                    ShortCut.Core.Parse.Script,
                    ShortCut.Core.Pretty,
                    ShortCut.Core.Repl,
                    ShortCut.Core.Types,
                    ShortCut.Core.Util,
                    ShortCut.Modules,
                    ShortCut.Modules.BioMartR,
                    ShortCut.Modules.Blast,
                    ShortCut.Modules.BlastCRB,
                    ShortCut.Modules.BlastDB,
                    ShortCut.Modules.BlastHits,
                    ShortCut.Modules.BlastRBH,
                    ShortCut.Modules.Cheat,
                    ShortCut.Modules.Glob,
                    ShortCut.Modules.Length,
                    ShortCut.Modules.Math,
                    ShortCut.Modules.Permute,
                    ShortCut.Modules.Repeat,
                    ShortCut.Modules.Summarize,
                    ShortCut.Modules.SeqIO,
                    ShortCut.Modules.Sets,
                    ShortCut.Test,
                    ShortCut.Test.Deps
                    ShortCut.Test.Scripts,
                    ShortCut.Test.Parse,
                    ShortCut.Test.Parse.Arbitrary,
                    ShortCut.Test.Parse.Examples,
                    ShortCut.Test.Repl
  build-depends:    Command,
                    Glob,
                    MissingH,
                    QuickCheck,
                    base,
                    bytestring,
                    configurator,
                    containers,
                    cryptohash,
                    directory,
                    data-default-class,
                    docopt,
                    enclosed-exceptions,
                    safe-exceptions,
                    -- TODO remove in favor of path
                    filepath,
                    haskeline,
                    lock-file,
                    mtl,
                    parsec,
                    path,
                    path-io,
                    pretty,
                    process,
                    regex-compat,
                    silently,
                    scientific,
                    shake,
                    strict,
                    tagged-exception-core,
                    hspec,
                    tasty,
                    tasty-hunit,
                    tasty-hspec,
                    tasty-golden,
                    tasty-quickcheck,
                    temporary,
                    text,
                    transformers,
                    unix,
                    utility-ht
