name:               ShortCut
version:            0.7.0.0
synopsis:           A scripting language that makes short work of phylogenomic cuts
author:             Jeffrey David Johnson
maintainer:         jefdaj@berkeley.edu
build-type:         Simple
cabal-version:      >=1.10
data-files:         usage.txt,
                    data/*.faa,
                    data/*.fna,
                    data/*.gbk,
                    data/*.gbff,
                    tests/blast/*.cut,
                    tests/blast/*.out,
                    tests/blast/*.tree,
                    tests/biomartr/*.cut,
                    tests/biomartr/*.out,
                    tests/biomartr/*.tree,
                    tests/blastcrb/*.cut,
                    tests/blastcrb/*.out,
                    tests/blastcrb/*.tree,
                    tests/blastdb/*.cut,
                    tests/blastdb/*.out,
                    tests/blastdb/*.tree,
                    tests/blasthits/*.cut,
                    tests/blasthits/*.out,
                    tests/blasthits/*.tree,
                    tests/blastrbh/*.cut,
                    tests/blastrbh/*.out,
                    tests/blastrbh/*.tree,
                    tests/dependencies/*.txt,
                    tests/glob/*.cut,
                    tests/glob/*.out,
                    tests/glob/*.tree,
                    tests/length/*.cut,
                    tests/length/*.out,
                    tests/length/*.tree,
                    tests/lists/*.cut,
                    tests/lists/*.out,
                    tests/lists/*.tree,
                    tests/math/*.cut,
                    tests/math/*.out,
                    tests/math/*.tree,
                    tests/permute/*.cut,
                    tests/permute/*.out,
                    tests/permute/*.tree,
                    tests/repeat/*.cut,
                    tests/repeat/*.out,
                    tests/repeat/*.tree,
                    tests/repl/*.tree,
                    tests/repl/*.txt,
                    tests/seqio/*.cut,
                    tests/seqio/*.out,
                    tests/seqio/*.tree,
                    -- tests/summarize/*.cut,
                    -- tests/summarize/*.out,
                    -- tests/summarize/*.tree,
                    tests/vars/*.cut,
                    tests/vars/*.out,
                    tests/vars/*.tree

executable shortcut
  main-is:          ShortCut.hs
  -- TODO adjust -N to the actual number of cores!
  -- TODO get the tests to work with this! (make them single-threaded?)
  ghc-options: 
        -threaded
        -rtsopts
        -Wall
        -- -Werror
        -Wno-orphans
  default-language: Haskell2010
  hs-source-dirs:   .
  other-modules:    Paths_ShortCut,
                    ShortCut.Core,
                    ShortCut.Core.Compile,
                    ShortCut.Core.Compile.Basic,
                    ShortCut.Core.Compile.Each,
                    ShortCut.Core.Compile.Repeat,
                    ShortCut.Core.Paths,
                    ShortCut.Core.Cmd,
                    ShortCut.Core.Config,
                    ShortCut.Core.Debug,
                    ShortCut.Core.Eval,
                    ShortCut.Core.Parse,
                    ShortCut.Core.Parse.Basic,
                    ShortCut.Core.Parse.Expr,
                    ShortCut.Core.Parse.Script,
                    ShortCut.Core.Pretty,
                    ShortCut.Core.Repl,
                    ShortCut.Core.Types,
                    ShortCut.Core.Util,
                    ShortCut.Modules,
                    ShortCut.Modules.BioMartR,
                    ShortCut.Modules.Blast,
                    ShortCut.Modules.BlastCRB,
                    ShortCut.Modules.BlastDB,
                    ShortCut.Modules.BlastHits,
                    ShortCut.Modules.BlastRBH,
                    ShortCut.Modules.Cheat,
                    ShortCut.Modules.Glob,
                    ShortCut.Modules.Length,
                    ShortCut.Modules.Math,
                    ShortCut.Modules.Permute,
                    ShortCut.Modules.Repeat,
                    ShortCut.Modules.Summarize,
                    ShortCut.Modules.SeqIO,
                    ShortCut.Modules.Sets,
                    ShortCut.Test,
                    ShortCut.Test.Deps
                    ShortCut.Test.Scripts,
                    ShortCut.Test.Parse,
                    ShortCut.Test.Parse.Arbitrary,
                    ShortCut.Test.Parse.Examples,
                    ShortCut.Test.Repl
  build-depends:    Command,
                    Glob,
                    MissingH,
                    QuickCheck,
                    base,
                    bytestring,
                    configurator,
                    containers,
                    cryptohash,
                    directory,
                    data-default-class,
                    docopt,
                    enclosed-exceptions,
                    safe-exceptions,
                    -- TODO remove in favor of path
                    filepath,
                    haskeline,
                    lock-file,
                    mtl,
                    parsec,
                    path,
                    path-io,
                    pretty,
                    process,
                    regex-compat,
                    silently,
                    scientific,
                    shake,
                    split,
                    strict,
                    tagged-exception-core,
                    hspec,
                    tasty,
                    tasty-hunit,
                    tasty-hspec,
                    tasty-golden,
                    tasty-quickcheck,
                    temporary,
                    text,
                    transformers,
                    unbounded-delays,
                    unix,
                    utility-ht,
                    time
